gccida/c3/choose_hard_reg_mode
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/choose_hard_reg_mode/src/regclass.c:1147:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode  choose_hard_reg_mode( unsigned int regno, unsigned int nregs) 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/choose_hard_reg_mode/src/regclass.c:1149:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v2; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/choose_hard_reg_mode/src/regclass.c:1151:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v4; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/choose_hard_reg_mode/src/regclass.c:1154:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v7; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/choose_hard_reg_mode/src/regclass.c:1158:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v11; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/choose_hard_reg_mode/src/regclass.c:1162:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v15; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/choose_hard_reg_mode/src/regclass.c:1207:25: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( ( unsigned int)( mode_class_0[v2] - 5) < 2) + 1 == nregs && ix86_hard_regno_mode_ok( regno, v2) ) 
                        ^~~~~~~~~~~~
                        mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/choose_hard_reg_mode/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/choose_hard_reg_mode/src/regclass.c:1254:25: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( ( unsigned int)( mode_class_0[v7] - 5) < 2) + 1 == nregs && ix86_hard_regno_mode_ok( regno, v7) ) 
                        ^~~~~~~~~~~~
                        mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/choose_hard_reg_mode/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/choose_hard_reg_mode/src/regclass.c:1272:25: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( ( unsigned int)( mode_class_0[v11] - 5) < 2) + 1 == nregs && ix86_hard_regno_mode_ok( regno, v11) ) 
                        ^~~~~~~~~~~~
                        mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/choose_hard_reg_mode/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/choose_hard_reg_mode/src/regclass.c:1318:25: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( ( unsigned int)( mode_class_0[v15] - 5) < 2) + 1 == nregs && ix86_hard_regno_mode_ok( regno, v15) ) 
                        ^~~~~~~~~~~~
                        mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/choose_hard_reg_mode/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/choose_hard_reg_mode/src/regclass.c:1354:25: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( ( unsigned int)( mode_class_0[52] - 5) < 2) + 1 == nregs ) 
                        ^~~~~~~~~~~~
                        mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/choose_hard_reg_mode/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/choose_hard_reg_mode/src/regclass.c:1360:25: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( ( unsigned int)( mode_class_0[53] - 5) < 2) + 1 == nregs ) 
                        ^~~~~~~~~~~~
                        mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/choose_hard_reg_mode/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/choose_hard_reg_mode/src/regclass.c:1366:25: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( ( unsigned int)( mode_class_0[54] - 5) < 2) + 1 == nregs ) 
                        ^~~~~~~~~~~~
                        mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/choose_hard_reg_mode/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/choose_hard_reg_mode/src/regclass.c:1372:25: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( ( unsigned int)( mode_class_0[55] - 5) < 2) + 1 == nregs ) 
                        ^~~~~~~~~~~~
                        mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/choose_hard_reg_mode/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/choose_hard_reg_mode/src/regclass.c:1378:25: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( ( unsigned int)( mode_class_0[56] - 5) < 2) + 1 == nregs ) 
                        ^~~~~~~~~~~~
                        mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/choose_hard_reg_mode/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/choose_hard_reg_mode/src/regclass.c:1384:25: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( ( unsigned int)( mode_class_0[57] - 5) < 2) + 1 == nregs ) 
                        ^~~~~~~~~~~~
                        mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/choose_hard_reg_mode/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/choose_hard_reg_mode/src/regclass.c:1390:25: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( ( unsigned int)( mode_class_0[58] - 5) < 2) + 1 != nregs ) 
                        ^~~~~~~~~~~~
                        mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/choose_hard_reg_mode/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
17 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/choose_hard_reg_mode/src/obj/regclass.o] Error 1
